syntax = "proto3";

package ibc.applications.nft_transfer.v1;

option go_package = "github.com/cosmos/ibc-go/v3/modules/apps/nft-transfer/types";

import "ibc/applications/nft_transfer/v1/transfer.proto";
import "gogoproto/gogo.proto";

// GenesisState defines the ibc-nft-transfer genesis state
message GenesisState {
  string              port_id = 1;
  repeated ClassTrace traces  = 2 [(gogoproto.nullable) = false];
}